more handling auf autogenerating memories